# gdhaskell

./: .gitmodules  cabal.project  out.txt  out1.txt  out3.txt
classgen/: classgen.cabal
classgen/src/: ExtensionApi.hs
gd-examples/hello-world/: cabal.project  hello-world.cabal
gd-examples/hello-world/ffi/cbits/: flib.c
gd-examples/hello-world/ffi/flib/: FLib.hs
gd-examples/hello-world/game/: icon.png.import  project.godot
gd-examples/hello-world/game/.godot/: extension_list.cfg
gd-examples/hello-world/game/.godot/editor/: create_recent.Resource  editor_layout.cfg  filesystem_cache7  project_metadata.cfg  recent_dirs
gd-examples/hello-world/game/lib/: test_proj_library.gdextension
gd-extension-gen/: CHANGELOG.md  gd-extension-gen.cabal
gd-extension-gen/app/: Item.hs  Main.hs
gd-extension-gen/src/Godot/Extension/Generate/: Api.hs  Interface.hs  Schema.hs  Utils.hs
gd-haskell/: CHANGELOG.md  gd-haskell.cabal
gd-haskell-gen/: CHANGELOG.md  gd-haskell-gen.cabal
gd-haskell-gen/src/: ExtensionApi.hs  Main.hs
gd-haskell/src/Godot/: MyLib.hs
gd-haskell/src/Godot/Extension/: Core.hs  Ext.chs  Extension.chs  Pool.hs  Unsafe.hs
gdhaskell/: gdhaskell.cabal
gdhaskell/src/Godot/: MyLib.hs
gdhaskell/src/Godot/Extension/: Extension.chs
