cabal-version:      2.4
name:               gd-extension-gen
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Generate GDExtension bindings.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Winston Hartnett
maintainer:         winstonhartnett@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Godot.Extension.Generate.Api
    Godot.Extension.Generate.Interface
    Godot.Extension.Generate.Schema
    Godot.Extension.Generate.Utils

  build-depends:
      aeson
    , base                  ^>=4.16.1.0
    , bytestring
    , generic-lens
    , hashable
    , language-c
    , lens
    , mtl
    , string-interpolate
    , text
    , unordered-containers
    , vector
    , vector-algorithms
    , ghc-source-gen
    , ghc
    , primitive
    , witch
    , megaparsec
    , godot-megaparsec
    , text-display

  hs-source-dirs:     src
  ghc-options:        -Wall
  default-language:   GHC2021
  default-extensions:
    DataKinds
    LambdaCase
    OverloadedStrings
    OverloadedLists
    TypeApplications
    TypeFamilies

executable gd-extension-gen
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
      aeson
    , base                  ^>=4.16.1.0
    , bytestring
    , gd-extension-gen
    , text
    , vector
    , ghc
    , ghc-paths
    , ghc-source-gen
    , mtl
    , ghc-lib-parser
    , primitive
    , unordered-containers
    , text-display

  hs-source-dirs:   app
  ghc-options:      -Wall
  default-language: GHC2021
