cabal-version:      2.4
name:               gd-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Winston Hartnett
maintainer:         winstonhartnett@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  godot-headers/godot/gdnative_interface.h
  godot-headers/extension_api.json

library
    exposed-modules:
      Godot.MyLib
      Godot.Extension.Extension

    include-dirs:
      godot-headers

    build-tools: c2hs

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.1.0
      , witch
    hs-source-dirs:   src
    default-language: GHC2021
